kubernetes/apps/database/pgadmin/app/httproute.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: database
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: simple-icons:postgresql
    hajimari.io/group: server
    hajimari.io/appName: postgresql-admin
spec:
  hostnames:
    - "pgadmin.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
          pathType: PathPrefix
          value: /
      backendRefs:
        - name: pgadmin
          port: 80
